# localherobox-fullstack-engineer-quest

./: .gitignore  CHALLENGE_README.md  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  Makefile  README.md  __init__.py  pyproject.toml  start.sh
backend/data/: campaigns.csv  recipients.csv
backend/src/: __init__.py  config.py  csv_importer.py  main.py  models.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: orders.py
backend/src/cmd/: __init__.py  csv_importer.py
backend/src/crud/: __init__.py  article.py  recipient.py
backend/src/database/: __init__.py  models.py  session.py
backend/src/models/: __init__.py  campaign.py  recipient.py
backend/src/schemas/: __init__.py  campaign.py  recipient.py
backend/tests/: __init__.py  config.py  fixtures.py  test_recipients.py  utils.py
data/: campaigns.csv  recipients.csv
