[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bogdan Ciobotaru (bciobo) <bogdan.ciobotaru1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.81.0"}
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pytest = "^7.1.3"
black = "^22.8.0"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
